--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,8 +13,8 @@
 
     <fragment
         android:id="@+id/nav_fragment_history"
-        tools:layout="@layout/fragment_home"
-        android:name="com.shashifreeze.appopen.view.ui.home.HomeFragment"
+        tools:layout="@layout/fragment_history"
+        android:name="com.shashifreeze.appopen.view.ui.history.HistoryFragment"
         android:label="@string/history" />
 
     <fragment
